simplified to List conversion